--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "discord-client-template",
-  "version": "1.0.3",
+  "name": "@ouosama-hub/discord-client-template",
+  "version": "1.0.4",
   "main": "app.js",
   "bin": {
     "@ouosama-hub/discord-client-template": "index.js"
