FIX : FIX Bug loaderrr and i win!!!

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.8",
   "main": "app.js",
   "bin": {
-    "@ouosama-hub/discord-client-template": "index.js"
+    "discord-client-template": "index.js"
   },
   "scripts": {
     "start": "node app.js"
