--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,5 +1,6 @@
 {
-  "TOKEN": "YOUR_TOKEN",
+  "TOKEN": "YOUR_BOT_TOKEN",
   "CLIENT_ID": "YOUR_CLIENT_ID",
-  "GUILD_ID": "YOUR_GUILD_ID"
+  "GUILD_ID": "GUILD_ID",
+  "DEFAULT_COOLDOWN": 10
 }
