--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@discord-player/extractor": "^4.5.1",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.17.0",
     "cli-color": "^2.0.4",
-    "discord.js": "^14.16.3"
+    "discord-player": "^6.7.1",
+    "discord-player-youtubei": "^1.3.5",
+    "discord.js": "^14.16.3",
+    "libsodium-wrappers": "^0.7.15"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "eslint": "^9.13.0",
-    "globals": "^15.11.0"
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0"
   },
   "keywords": [
     "discord",
