--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord-player": "^6.7.1",
     "discord-player-youtubei": "^1.3.5",
     "discord.js": "^14.16.3",
+    "ffmpeg-static": "^5.2.0",
     "libsodium-wrappers": "^0.7.15"
   },
   "devDependencies": {
